<resources>
    <string name="app_name">Open Windows Test</string>
    <string name="label_text1">Plataforma digital de Seguros</string>
    <string name="button_text0">Home</string>
    <string name="button_text1">Tarjeta Protegida</string>
    <string name="button_text2">Vive más Protegido</string>
    <string name="button_text3">Posventa</string>
    <string name="button_text4">Posventa Prod</string>
</resources>